# pet

./: BUGS  CHANGELOG  Changelog  Doxyfile  Makefile  Makefile.am  Makefile.base  README  TODO  config.h.in  configure.ac  doxyconfig.cheap  doxyconfig.cheap.in  doxyconfig.flop  doxyconfig.flop.in  logging.conf  logging.properties  pet-config.h  pet-config.h.in  pet.vcproj  simplelog.properties
borland/: l2.bpr  l2lib.h  pet.bpr  pet.cpp
cheap/: Jamfile  Makefile  Makefile.am  Makefile.base  README  agenda.cpp  agenda.h  api.h  chart-mapping.cpp  chart-mapping.h  chart.cpp  chart.h  chartpositions.h  cheap.cpp  cheap.h  cheap.pro  cheap.vcproj  cheaptimer.h  cppbridge.cpp  cppbridge.h  dag-tomabechi.cpp  dag-tomabechi.h  dagprinter.cpp  dagprinter.h  dumpgram.cpp  eclpreprocessor.cpp  eclpreprocessor.h  extdict.cpp  extdict.h  failure.cpp  failure.h  fs-chart-util.cpp  fs-chart-util.h  fs-chart.cpp  fs-chart.h  fs.cpp  fs.h  fsc-tokenizer.cpp  fsc-tokenizer.h  fullform-morph.cpp  (+112 more)
cheap/test/: Jamfile  Makefile.am  fs-chart-test.cpp  paths-test.cpp  paths.cpp  tester.cpp  types-test.cpp
common/: Configuration.cpp  Configuration.h  ConfigurationInternal.h  ConfigurationTest.cpp  Makefile.am  bitcode.cpp  bitcode.h  builtins.h  byteorder.h  chunk-alloc.cpp  chunk-alloc.h  config-inner.h  config.cpp  config.h  configs-inner.h  configs.cpp  configs.h  dag-alloc.cpp  dag-alloc.h  dag-arced.cpp  dag-arced.h  dag-common.cpp  dag-common.h  dag-io.cpp  dag-print-fed.cpp  dag-simple.cpp  dag-simple.h  dag.h  dagprinter.cpp  dagprinter.h  dumper.cpp  dumper.h  errors.cpp  errors.h  getopt.h  grammar-dump.cpp  grammar-dump.h  hash.cpp  hash.h  hashing.h  (+21 more)
common/test/: ConfigurationTest.cpp  Makefile.am
common/tests/: ConfigurationTest.cpp
flop/: Jamfile  Jamfile.in  Makefile  Makefile.am  Makefile.base  README  boost.cpp  builtins.cpp  corefs.cpp  dag-tdl.cpp  dump.cpp  expand.cpp  flop.cpp  flop.h  flop.pro  flop.vcproj  full-form.cpp  hashing.h  hierarchy.cpp  hierarchy.h  options.cpp  options.h  parse-tdl.cpp  partition.cpp  partition.h  print-chic.cpp  print-tdl.cpp  reduction.cpp  reduction.h  symtab.h  template.cpp  terms.cpp  util.cpp
fspp/: Makefile.am  fspp.cpp  fspp.h  main.cpp  petecl.c  petecl.h  unicode.h
goofy/: Makefile  README  goofy.cpp  goofy.h
m4/: ax_boost_base.m4  ax_boost_iostreams.m4  ax_boost_regex.m4  ax_boost_system.m4  ax_lib_ecl.m4  ax_lib_icu.m4  ax_lib_log4cpp.m4  ax_lib_xmlrpc-c.m4
main/: BUGS  CHANGELOG  Makefile.am  Makefile.base  TODO  doxyconfig.cheap  doxyconfig.flop  pet-config.h.in
main/borland/: l2.cpp
main/cheap/: Jamfile.in  Makefile.am  chart.h  cheap.h  cppbridge.h  dag-tomabechi.h  dumpgram.cpp  eclpreprocessor.h  extdict.cpp  failure.cpp  fs.h  grammar.h  input-modules.h  item-printer.h  items.txt  lexicon.cpp  lexparser.cpp  morph-inner.h  morph.cpp  morph.h  mrs.cpp  mrs.h  mtest.cpp  options.cpp  parse.cpp  parse.h  paths.h  pet.cpp  petecl.c  petmrs.c  pic-handler.h  pic-states.h  postags.cpp  postags.h  psqllex.cpp  psqllex.h  psqltest.c  qc.cpp  sm.cpp  sm.h  (+9 more)
main/common/: Makefile.common  bitcode.cpp  bitcode.h  builtins.h  chunk-alloc.cpp  chunk-alloc.h  configs-inner.h  dag-alloc.cpp  dag-alloc.h  dag-common.cpp  dag-io.cpp  dag-simple.h  dag.h  dagprinter.cpp  dumper.h  getopt.h  grammar-dump.cpp  hash.h  hashing.h  lex-io.h  list-int.h  logging.h  loggingTest.cpp  mfile.h  settings.cpp  settings.h  typecache.h  types.cpp  types.h  utility.cpp  utility.h
main/flop/: Jamfile.base  corefs.cpp  dump.cpp  expand.cpp  flop.cpp  flop.h  full-form.cpp  hierarchy.h  options.h  parse-tdl.cpp  print-tdl.cpp  reduction.cpp  symtab.h  terms.cpp  util.cpp
main/fspp/: Makefile.am  errors.h  fspp.cpp  fspp.h  main.cpp  petecl.h  unicode.cpp
main/goofy/: Makefile
main/sample/ab-grammar/: full.voc
main/sample/ab-grammar/lkb/: globals.lsp
mrs/: Makefile.am  configure.ac  edg.cpp  edg.h  edmcompare.cpp  eds.cpp  eds.h  mrs-comparison.cpp  mrs-comparison.h  mrs-handler.cpp  mrs-handler.h  mrs-printer.cpp  mrs-printer.h  mrs-reader.cpp  mrs-reader.h  mrs-states.cpp  mrs-states.h  mrs-tfs.cpp  mrs-tfs.h  mrs-utility.cpp  mrs-utility.h  mrs.cpp  mrs.h  mrsconvert.cpp  mrstest.cpp  vpm.cpp  vpm.h
mrs/html/: hover.js  mrs.css  mrs.js
mrs/m4/: boost.m4
sample/ab-grammar/: Version.lisp  ab.grm  ab.tdl
sample/ab-grammar/lkb/: script  user-fns.lsp
sample/ab-grammar/pet/: ab.set  flop.set
sample/tokmap-grammar/: README  gen-lex.tdl  grammar.grm  grammar.tdl  inpmap-rules.tdl  lexflt-rules.tdl  lexicon.tdl  lexmap-rules.tdl  test.fsc  tokmap-rules.tdl  types.tdl
sample/tokmap-grammar/lkb/: script.lsp
sample/tokmap-grammar/pet/: cm.set  common.set  flop.set  grammar.set
tests/: ConfigurationTest.cpp  Makefile.am
